tests/reference/pass_global_stmts-global_scope2-64078e2.stderr
syntax error: Expected program end
 --> tests/global_scope2.f90:1:1 - 2:5
  |
1 |    integer :: x
  |    ^^^^^^^^^^^^...
...
  |
2 |    x = 6
  | ...^^^^^ 
